web/wp-content/themes/lf-theme/source/scss/components/_header.scss
.site-header {
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    z-index: 20;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
        0 3px 6px rgba(0, 0, 0, 0.23);
    background-color: $menu-desktop-container;

    >.container-full-width {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
    }
}

// Fix for WP Admin menu on desktop and mobile.
.admin-bar .site-header {
    top: 32px;

    @media (max-width: 782px) {
        top: 0px;
    }
}

.logo {
    margin-top: 20px;
    margin-bottom: 20px;
    width: 180px;
    flex-shrink: 0;

    @media (min-width: 1000px) {
        width: 160px;

    }

    @media (min-width: 1100px) {
        width: 220px;
        margin-right: 20px;
    }

    a {
        display: block;
    }

    img {
        width: 100%;
        height: auto;
        transition: all 0.25s ease;
        display: block;
    }
}

.header-search {
    svg {
        fill: $white;
        height: 15px;
    }

}

@media (max-width: 999px),
(min-width: 0px) and (max-height: 699px) {

    .hamburger {
        display: inline-block;
        z-index: 10;
    }

    .menu-container-with-search {
        position: fixed;
        left: -100%;
        top: 0;
        bottom: 0;
        width: 100%;
        height: 100%;
        padding: 75px 30px 25px 30px;
        background-color: $menu-mobile-container;
        z-index: 5;
        overflow-y: scroll;

        // activate the menu
        &.is-active {
            left: 0;
        }
    }

    .site-navigation {
        display: flex;
        align-items: center;

        >* {
            width: 100%;

            @media (min-width: 600px) {
                margin-left: auto;
                margin-right: auto;
                width: 500px;
                max-width: 500px;

            }
        }
    }

    .main-navigation {
        margin-bottom: 20px;

        a {
            display: block;
            color: $menu-link;
            text-decoration: none;
            font-weight: 500;
            padding-top: 0.75rem;
            padding-bottom: 0.75rem;
            font-size: 0.9em;

            @media (min-width: 375px) {
                font-size: 1.125em;
                padding-top: 1rem;
                padding-bottom: 1rem;
            }

        }

        >li {
            padding: 0px 15px;
        }

        >li>a {
            border-bottom: 1px solid $menu-mobile-divider;
        }
    }

    .header-cta {
        .button {
            display: flex;
            width: 100%;
        }

        margin-top: 20px;
        margin-bottom: 20px;
    }

    .header-search {
        width: 100%;

        .search-toggle {
            display: none;
        }
    }

    .menu-item-has-children {
        position: relative;

        .sub-menu {
            display: none;
            background-color: $menu-mobile-submenu;

            a {
                padding-left: 10px;
            }

            .sub-menu {
                background-color: $menu-mobile-submenu-submenu;

                a {
                    padding-left: 25px;
                }
            }
        }

        >a {
            padding-right: 1.5em;
            display: flex;
            align-items: center;
            justify-content: space-between;

            // Arrow after link
            &::after {
                display: block;
                content: "";
                width: 12px;
                height: 12px;
                border-bottom: 1px solid $white;
                border-right: 1px solid $white;
                transform: rotate(45deg) translateY(-50%);
                transition: all 0.3s ease-out;
            }

            // rotate when sub menu is open
            &.is-open::after {
                transform: rotate(-135deg);
                transform-origin: 70% 30%;
                transition-duration: 0.2s;
                margin-top: 12px;
            }
        }
    }

    .menu-is-active {

        // hide hello bar when mobile menu is open
        .hello-bar {
            height: 0
        }
    }

    .site-navigation {
        display: flex;
        flex-direction: column;
    }

    .search-bar {
        width: 100%;

        .wrap {
            padding: 0
        }
    }

    .search-form {
        display: flex;
        width: 100%;
        justify-content: center;

        input[type="search"] {
            margin-right: 2%;
            flex-grow: 1;
        }

        .search-input {
            min-width: 0;
            border-radius: 0;
            -webkit-appearance: none;
        }

    }
}
/* ... */

